Use the same max-width for Bookmarks folders and the Bookmarks submenu.

The Chrome app menu and its submenus have a max-width of 800px. Bookmarks
_subfolders_ have a max-width of 400px. But this doesn't apply to the
bookmarks menu itself.

Currently if a bookmark has a long title and appears in the bookmarks
bar top-level, it will push out the width of the `Bookmarks` submenu
when accessed via the Chrome app menu to a width that feels inconsistent.

Bug: 881936
Change-Id: I1535b2b27f183e4106e21799ba91a5ab40287489
Reviewed-on: https://chromium-review.googlesource.com/1215503
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590191}
Former-commit-id: 12b5c9b286dfca5991508e968db71c832ca05b3c